# import necessary libraries

class SimObject:
    # for future implementations
    def __init__(self) -> None:
        pass
        
    # OVERRIDE
    def validate(self) -> None:
        """Used to validate the function."""
